Refactoring and manual mapping
